<resources>
    <string name="app_name">DrivingSchool</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="main">Main</string>
    <string name="enroll">Enroll</string>
    <string name="profile">Profile</string>
    <string name="login_please">Пройдите авторизацию</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_ru">Войти</string>
    <string name="login_error_text">Логин или пароль введены неверно, Попробуйте еще раз</string>
    <string name="no_connection">Нет соединения</string>
    <string name="check_the_internet_connection">Проверьте подключение \nк интернету</string>
    <string name="full_name">Имя Фамилия Отчество</string>
    <string name="telephone_number">Номер телефона</string>
    <string name="beginning">начало</string>
    <string name="update_connect">Обновить соединение</string>
    <string name="choose_instructor">выбранный инструктор</string>
    <string name="choose_date">выбранная дата</string>
    <string name="choose_time">выбрать время</string>
    <string name="enroll_to_a_lesson">Записаться</string>
    <string name="choose_instructor_date_time">Выберите инструктора, дату, время</string>
    <string name="second_name">Кузнецова</string>
    <string name="name">Александра</string>
    <string name="timetable">"Расписание</string>
    <string name="start_time">19:00</string>
    <string name="online_registration">Онлайн запись</string>
    <string name="check_calendar">Проверить</string>
    <string name="back_calendar"><![CDATA[<]]></string>
    <string name="next_calendar"><![CDATA[>]]></string>
    <string name="calendar_B">В</string>
    <string name="calendar_P">П</string>
    <string name="calendar_C">С</string>
    <string name="calendar_CH">Ч</string>
    <string name="cancel_lesson">Отменить занятие</string>
    <string name="ending_time">12:00</string>
    <string name="ending_date">29 октября</string>
    <string name="end">Конец</string>
    <string name="beginning_time">11:00</string>
    <string name="beginning_date">29 октября</string>
    <string name="begin">Начало</string>
    <string name="number">+996 111 111 111</string>
    <string name="current_lesson">Текущее занятие</string>
    <string name="previous_lesson">Предыдущее занятие</string>
    <string name="write_comment">Оставить комментарий</string>
    <string name="experience">Стаж: </string>
    <string name="experience_">Стаж</string>
    <string name="car_name">Honda Accord</string>
    <string name="feedback">Отзывы</string>
    <string name="new_password">Новый пароль</string>
    <string name="input_new_password">Введите новый пароль</string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="input_confirm_password">Подтвердите новый пароль</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="confirm_exit">Подтвердите выход</string>
    <string name="back">Назад</string>
    <string name="confirm">Подтвердить</string>
    <string name="make_a_schedule">Составить расписание</string>
    <string name="continue_text">Отправить</string>
    <string name="comment_body_text">Ваше занятие завершено, поставьте \nоценку вашему инструктору</string>
    <string name="comment_instructor_body_text">Ваше занятие завершено, поставьте \nоценку вашему курсанту</string>
    <string name="change_photo">Изменить фотографию</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="content_des_profile_photo">profile photo</string>
    <string name="content_des_fullscreen_profile_photo">fullscreen profile photo</string>
    <string name="old_password">Старый пароль</string>
    <string name="input_old_password">Введите старый пароль</string>
    <string name="instructor_surname">Иванов</string>
    <string name="instructor_name">Иван</string>
    <string name="change_profile_photo">Изменить фотографию</string>
    <string name="group">Группа</string>
    <string name="group_number">№4</string>
    <string name="change_password">Сменить пароль</string>
    <string name="exit">Выйти</string>
    <string name="experience_num">15 </string>
    <string name="car_brand">Марка авто</string>
    <string name="text_no_lesson">У вас пока нет занятий</string>
    <string name="text_no_lesson_previous">У вас пока не было занятий</string>
    <string name="fish_text">Lorem ipsum dolor sit amet consectetur. Sapien turpis elementum quis gravida augue placerat neque. Nibh nunc nulla tellus scelerisque sit diam facilisis. Eu euismod mi tellus augue. In cras et elementum risus faucibus. Lectus suspendisse aliquet nisi erat facilisis egestas eros. Dolor lectus massa egestas magna sem mi massa tempus risus. Aliquam scelerisque vel massa etiam volutpat amet. porttitor</string>
    <string name="profile_photo">profile photo</string>
    <string name="select_instructor">Выберите инструктора</string>
    <string name="ok">Ок</string>
    <string name="select_date">Выберите дату</string>
    <string name="select_time">Выберите время</string>
    <string name="password_description">Пароль должен содержать не менее 6 символов, включая цифры, буквы и специальные символы (!$@%)</string>
    <string name="ok_upperCase">OK</string>
    <string name="comment">Комментарий</string>
    <string name="_0_250">(0/250)</string>
    <string name="start">Начало</string>
    <string name="end_text">Конец</string>
    <string name="cancel_lesson_text">Вы точно хотите отменить занятие?</string>
    <string name="text_btn_cancel_lesson">Отменить занятие</string>
    <string name="time_8_00">08:00</string>
    <string name="time_9_00">09:00</string>
    <string name="time_10_00">10:00</string>
    <string name="time_11_00">11:00</string>
    <string name="time_12_00">12:00</string>
    <string name="time_13_00">13:00</string>
    <string name="time_14_00">14:00</string>
    <string name="time_15_00">15:00</string>
    <string name="time_16_00">16:00</string>
    <string name="time_17_00">17:00</string>
    <string name="time_18_00">18:00</string>
    <string name="name_of_instructor">Имя инструктора</string>
    <string name="date_and_time">Дата и время</string>
    <string name="date_and_time_from_table">12.12.2023, 08:00, 09:00,10:00</string>
    <string name="default_date_and_time">12.12.2023, 16.00</string>
    <string name="default_instructor_name">Иванов Иван Иванович</string>
    <string name="name_of_the_instructor">Имя инструктора</string>
    <string name="start_lesson">Начать занятие</string>
    <string name="end_lesson">Завершить занятие</string>
    <string name="status_planned">Запланирован</string>
    <string name="yyyy_mm_dd_hh_mm_ss">yyyy-MM-dd, HH:mm:ss</string>
    <string name="alert_continue_text">Продолжить</string>
    <string name="leave_a_comment">Оставить комментарий</string>
    <string name="person_full_name">%1$s %2$s</string>
    <string name="comment_hint">Ваш комментарий</string>
    <string name="date">10</string>
    <string name="select_date_enroll_instructor">Выберите дату</string>
    <string name="yyyy_mm_dd_t_hh_mm_ss_ssssssx">yyyy-MM-dd\'T\'HH:mm:ss.SSSSSSX</string>
    <string name="your_comment_saved">Ваш комментарий оставлен</string>
    <string name="cursant">Курсант</string>
    <string name="new_notification">Новое</string>
    <string name="save_lower">Сохранить</string>
    <string name="number_of_lessons">Количество занятий</string>
    <string name="main_page">Главная страница</string>
    <string name="profile_title">Профиль</string>
    <string name="no_title">No title</string>
    <string name="instructor">instructor</string>
    <string name="student">student</string>
    <string name="tag">TAG</string>
    <string name="r">r</string>
    <string name="image_request_body">image/*</string>
    <string name="image">image</string>
    <string name="instructor_last_name">Иванович</string>
    <string name="empty_state">Empty state</string>
    <string name="eee_mmm_dd_hh_mm_ss_gmt_z_yyyy">EEE MMM dd HH:mm:ss \'GMT\'Z yyyy</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="hh_mm">HH:mm</string>
    <string name="hh_mm_ss">HH:mm:ss</string>
    <string name="successfully_enrolled">Запись забронирована</string>
    <string name="lesson_cancelled">Занятие отменено</string>
    <string name="lesson_planed">Занятие запланировано</string>
    <string name="notification_error">Не удалось получить данные</string>
    <string name="student_name">Иван</string>
    <string name="last_name">Иванович</string>
    <string name="active">active</string>
    <string name="success">success</string>
    <string name="error">error</string>
    <string name="d_mmmm">d MMMM</string>
    <string name="ru">ru</string>
    <string name="empty">Empty</string>
    <string name="your_lesson_started">Ваше занятие началось</string>
    <string name="lesson_start_is_not_possible_due_to_time_constraints">Урок начать невозможно из-за ограничения времени</string>
    <string name="your_lesson_ended">Ваше занятие закончилось</string>
    <string name="yyyy_mm_dd_space_hh_mm_ss">yyyy-MM-dd HH:mm:ss</string>
    <string name="student_ru">Курсант</string>
    <string name="absent">Не пришел</string>
    <string name="Check_timetable">Расписание на следующую неделю составляется с пятницы по воскресенье</string>
    <string name="dd_mm_yyyy">dd.MM.yyyy</string>
    <string name="cancel_alert_msg">Занятие можно отменить только \nза 4 часа</string>
    <string name="instructor_text">Инструктор</string>
    <string name="cancel_is_impossible">Отмена занятия невозможна</string>
    <string name="canceled_text">Ваше занятие отменено</string>
    <string name="calc_time_text">%1$s:%2$s</string>
    <string name="delimeter">:</string>
    <string name="comment_is_sended">Ваш комментарий отправлен</string>
    <string name="planned">Запланирован</string>
    <string name="active_ru">Активен</string>
    <string name="canceled">Отменен</string>
    <string name="finished">Завершен</string>
    <string name="unknown_status">Неизвестный статус</string>
    <string name="unknown_date_type">Unknown date type</string>
    <string-array name="mcv_monthLabels">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>
    <string-array name="mcv_weekLabels">
        <item>П</item>
        <item>В</item>
        <item>С</item>
        <item>Ч</item>
        <item>П</item>
        <item>С</item>
        <item>В</item>
    </string-array>
    <string name="experience_year">Стаж: %1$d год</string>
    <string name="experience_years_2..4">Стаж: %1$d года</string>
    <string name="experience_years_5..9">Стаж: %1$d лет</string>
    <string name="year">"%1$d год"</string>
    <string name="year_2..4">"%1$d года"</string>
    <string name="year_5..9">"%1$d лет"</string>
    <string name="notifications">Уведомления</string>
    <string name="for_instructor">инструктору</string>
    <string name="for_student">студенту</string>
    <string name="current_week">Текущая неделя</string>
    <string name="next_week">Следующая неделя</string>
    <string name="no_text_schedule">У вас пока нет расписания</string>
    <string name="password_successfully_changed">Пароль успешно изменен</string>
    <string name="password_are_not_the_same">Пароли не совпадают</string>
    <string name="password_should_include_more_than_6_symbols">Пароль должен содержать не менее 6 символов</string>
    <string name="old_password_is_not_correct">Неверный старый пароль</string>
</resources>