<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".ui.fragments.enroll.selectInstructor.InstructorInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_photo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor_name"
                    android:textSize="20sp"
                    android:fontFamily="@font/roboto_medium"/>
                <TextView
                    android:id="@+id/tv_surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor_surname"
                    android:textSize="20sp"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/roboto_medium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <TextView
                    android:id="@+id/tv_expience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"
                    android:textSize="16sp"
                    android:textColor="#545454"/>
                <TextView
                    android:id="@+id/tv_expience_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/experience_num"
                    android:textSize="16sp"
                    android:textColor="#545454"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textSize="12sp"
                android:textColor="#545454"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/tv_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_name"
                android:textSize="12sp"
                android:textColor="#545454"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="20sp"
        android:layout_marginTop="24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_instructor_profile_comments"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/instructor_profile_comment_item"/>



</LinearLayout>