<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="80dp"
    tools:context=".ui.fragments.main.ScheduleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        
        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="profile image" />
        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="268dp"
            android:layout_height="24dp"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/iv_profile_image"
            app:layout_constraintStart_toEndOf="@id/iv_profile_image"/>
        <TextView
            android:id="@+id/tv_number"
            android:layout_width="107dp"
            android:layout_height="16dp"
            android:text="@string/telephone_number"
            android:textSize="12sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_fullname"
            app:layout_constraintStart_toEndOf="@id/iv_profile_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/top_bottom_border_background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginning"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_sans"
                android:textFontWeight="700" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginning_date"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginning_time"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_sans"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textSize="18sp"
                android:fontFamily="@font/nunito_sans"
                android:textFontWeight="700" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_date"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_time"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_sans"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_lesson"
        android:textColor="#EB5757"
        android:background="@drawable/cancel_lesson_button_background"
        android:textAlignment="viewStart"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:paddingVertical="8dp"
        android:layout_marginTop="18dp"/>

</LinearLayout>