<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".ui.fragments.main.CurrentLessonFragment">

    <TextView
        android:id="@+id/tv_schedule_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_lesson"
        android:textSize="20sp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_about_instructor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_schedule_screen_title">
        
        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="profile image" />
        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toTopOf="@id/iv_profile_image"
            app:layout_constraintStart_toEndOf="@id/iv_profile_image"/>
        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="12sp"
            android:fontFamily="@font/roboto_light"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_fullname"
            app:layout_constraintStart_toEndOf="@id/iv_profile_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_lesson_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10.5dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/lesson_info_background"
        app:layout_constraintTop_toBottomOf="@id/cl_about_instructor">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginning_date"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:layout_marginTop="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginning_time"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_sans"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_medium" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_date"
                android:textSize="12sp"
                android:fontFamily="@font/nunito_sans"
                android:layout_marginTop="6dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ending_time"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_sans"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Оставить отзыв"-->
<!--        android:textSize="16sp"-->
<!--        android:paddingBottom="14dp"-->
<!--        android:layout_marginTop="22dp"-->
<!--        android:textColorHint="#5883CB"/>-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_lesson"
        android:textColor="#EB5757"
        android:background="@drawable/cancel_lesson_button_background"
        android:textAlignment="viewStart"
        android:paddingStart="6dp"
        android:paddingEnd="0dp"
        android:paddingVertical="8dp"
        android:layout_marginBottom="86dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>