<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.login.NoInternetFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="160dp"
        android:layout_marginHorizontal="80dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_connection"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#365CA7"
        android:gravity="center"
        android:layout_marginHorizontal="72dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_the_internet_connection"
        android:textSize="14sp"
        android:textColor="#B3261E"
        android:gravity="center"
        android:layout_marginHorizontal="72dp"/>


</LinearLayout>